--- a/src/main/java/com/obiscr/chatgpt/settings/ChatGPTSettingsPanel.form
+++ b/src/main/java/com/obiscr/chatgpt/settings/ChatGPTSettingsPanel.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="myMainPanel" layout-manager="GridLayoutManager" row-count="15" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="812" height="735"/>
+      <xy x="20" y="20" width="856" height="735"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -14,7 +14,7 @@
         </constraints>
         <properties>
           <margin top="2" left="-2" bottom="2" right="3"/>
-          <text value="默认"/>
+          <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.url.default.label"/>
         </properties>
       </component>
       <component id="25089" class="com.intellij.ui.components.JBRadioButton" binding="officialChoice">
@@ -23,7 +23,7 @@
         </constraints>
         <properties>
           <margin top="2" left="-2" bottom="2" right="3"/>
-          <text value="Offical"/>
+          <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.url.official.label"/>
         </properties>
       </component>
       <vspacer id="cde94">
@@ -44,7 +44,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="URL:"/>
+              <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.url.customize.url.label"/>
             </properties>
           </component>
           <component id="48bdc" class="com.intellij.ui.components.JBTextField" binding="customizeUrlField">
@@ -64,7 +64,7 @@
         <properties>
           <margin top="2" left="-2" bottom="2" right="3"/>
           <selected value="true"/>
-          <text value="Customize"/>
+          <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.url.customize.label"/>
         </properties>
       </component>
       <grid id="c0557" binding="defaultOptions" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -83,7 +83,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="国内用户直接选择此项，可以加快访问速度。"/>
+              <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.url.default.remark"/>
             </properties>
           </component>
         </children>
@@ -104,7 +104,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="If you have your own backend server, you can fill in your API address here."/>
+              <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.url.customize.remark"/>
             </properties>
           </component>
         </children>
@@ -125,7 +125,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="This option is to use the official URL."/>
+              <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.url.official.remark"/>
             </properties>
           </component>
         </children>
@@ -143,10 +143,10 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Access Token:"/>
+              <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.url.official.token.label"/>
             </properties>
           </component>
-          <component id="2a0bb" class="com.intellij.ui.components.JBTextField" binding="accessTokenArea">
+          <component id="2a0bb" class="com.intellij.ui.components.JBTextField" binding="accessTokenField">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="80" height="-1"/>
@@ -163,7 +163,7 @@
         <properties>
           <margin top="2" left="-2" bottom="2" right="3"/>
           <selected value="true"/>
-          <text value="Cloudflare"/>
+          <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.url.cloudflare.label"/>
         </properties>
       </component>
       <grid id="94bbf" binding="cloudflareIntroducePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -182,7 +182,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Use the cloudflare service."/>
+              <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.url.cloudflare.remark"/>
             </properties>
           </component>
         </children>
@@ -200,7 +200,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="URL:"/>
+              <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.url.cloudflare.url.label"/>
             </properties>
           </component>
           <component id="8757e" class="com.intellij.ui.components.JBTextField" binding="cloudFlareUrlField">
@@ -254,10 +254,10 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Read Timeout (s)"/>
+                  <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.connection.read_timeout.label"/>
                 </properties>
               </component>
-              <component id="b163f" class="javax.swing.JTextField" binding="readTimeout">
+              <component id="b163f" class="com.intellij.ui.components.JBTextField" binding="readTimeoutField">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -280,10 +280,10 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Connection Timeout (s)"/>
+                  <text resource-bundle="messages/ChatGPTBundle" key="ui.setting.connection.connection_timeout.label"/>
                 </properties>
               </component>
-              <component id="9704f" class="javax.swing.JTextField" binding="connectionTimeout">
+              <component id="9704f" class="com.intellij.ui.components.JBTextField" binding="connectionTimeoutField">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
