Add Support/Donate info

--- a/src/main/java/com/obiscr/chatgpt/settings/ChatGPTSettingsPanel.form
+++ b/src/main/java/com/obiscr/chatgpt/settings/ChatGPTSettingsPanel.form
@@ -52,7 +52,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="37f9a" class="com.intellij.ui.components.JBLabel">
+              <component id="37f9a" class="com.intellij.ui.components.JBLabel" binding="accountHelpLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -203,7 +203,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="8e3b6" class="com.intellij.ui.components.JBLabel">
+              <component id="8e3b6" class="com.intellij.ui.components.JBLabel" binding="customizeHelpLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
