Support for gpt-4 model (Only for ChatGPT)

--- a/src/main/java/com/obiscr/chatgpt/settings/ChatGPTSettingsPanel.form
+++ b/src/main/java/com/obiscr/chatgpt/settings/ChatGPTSettingsPanel.form
@@ -297,6 +297,7 @@
               <model>
                 <item value="text-davinci-002-render-sha"/>
                 <item value="text-davinci-002-render-paid"/>
+                <item value="gpt-4"/>
               </model>
             </properties>
           </component>
