Support gp4-xxx series model
Note :GPT-4 is currently in a limited beta and only accessible to those who have been granted access. Please join the waitlist to get access when capacity is available.

More info: https://platform.openai.com/docs/models/gpt-4

--- a/src/main/java/com/obiscr/chatgpt/settings/GPT3_35_TurboPanel.form
+++ b/src/main/java/com/obiscr/chatgpt/settings/GPT3_35_TurboPanel.form
@@ -69,6 +69,10 @@
               <model>
                 <item value="gpt-3.5-turbo"/>
                 <item value="gpt-3.5-turbo-0301"/>
+                <item value="gpt-4"/>
+                <item value="gpt-4-0314"/>
+                <item value="gpt-4-32k"/>
+                <item value="gpt-4-32k-0314"/>
                 <item value="text-davinci-003"/>
                 <item value="text-davinci-002"/>
                 <item value="code-davinci-002"/>
