--- a/src/main/java/com/obiscr/chatgpt/settings/GPT3_35_TurboPanel.form
+++ b/src/main/java/com/obiscr/chatgpt/settings/GPT3_35_TurboPanel.form
@@ -225,7 +225,7 @@
           </hspacer>
         </children>
       </grid>
-      <component id="9aaa3" class="com.intellij.ui.components.BrowserLink" binding="customizeServerHelpLabel" custom-create="true">
+      <component id="9aaa3" class="com.intellij.ui.components.labels.ActionLink" binding="customizeServerHelpLabel" custom-create="true">
         <constraints>
           <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="4" use-parent-layout="false"/>
         </constraints>
